# materialize-mcp-server

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/worflows/: lint.yml
agents/: pyproject.toml
agents/mcp_materialize_agents/: __init__.py  config.py  system_prompt.py
developers/: pyproject.toml  test_phase1.py
developers/mcp_materialize_developers/: __init__.py  config.py  logging_config.py  mcp_server.py  mz_client.py  observability.py  validation.py
developers/mcp_materialize_developers/search/: doc_search.py  s3_vector_bucket_store.py
developers/mcp_materialize_developers/tools/: object_freshness_diagnostics.py  search_documentation.py
developers/scripts/: upload_docs_to_s3_vectors.py
materialize_mcp_server/: __init__.py  config.py  doc_search.py  mcp_server.py  s3_vector_bucket_store.py  system_prompt.py
materialize_mcp_server/search/: doc_search.py  s3_vector_bucket_store.py
materialize_mcp_server/tools/: execute_ddl.py  monitor_data_freshness.py  run_sql_transaction.py
scripts/: upload_docs_to_s3_vectors.py
tests/integration/: test_mcp.py
